--- a/app/src/main/res/layout-v28/activity_profile_user_opposite2.xml
+++ b/app/src/main/res/layout-v28/activity_profile_user_opposite2.xml
@@ -60,6 +60,13 @@
 
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/informationIn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
 
 
             <LinearLayout
@@ -451,7 +458,7 @@
                 android:background="@color/cpb_white"
                 android:orientation="vertical"
                 android:paddingBottom="100dp" />
-
+        </LinearLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
