--- a/app/src/main/res/layout-v28/activity_profile.xml
+++ b/app/src/main/res/layout-v28/activity_profile.xml
@@ -61,6 +61,12 @@
 
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/informationIn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
 
             <LinearLayout
@@ -429,30 +435,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/background_gray"
-                android:orientation="vertical"
-                android:paddingTop="1dp"
-                android:paddingBottom="1dp">
-
-                <TextView
-                    android:id="@+id/report"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/background_white"
-                    android:gravity="center"
-                    android:paddingTop="20dp"
-                    android:paddingBottom="20dp"
-                    android:text="รายงาน Maisiravit"
-                    android:textColor="@color/text_gray"
-                    android:textSize="18dp" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:background="@color/cpb_white"
                 android:orientation="vertical"
                 android:paddingBottom="100dp" />
-
+        </LinearLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
