--- a/app/src/main/res/layout-v28/activity_setting.xml
+++ b/app/src/main/res/layout-v28/activity_setting.xml
@@ -12,9 +12,11 @@
 
 
     <androidx.core.widget.NestedScrollView
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background_gray"
+        android:id="@+id/pageSetting"
         >
 
         <LinearLayout
@@ -559,13 +561,14 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:paddingLeft="20dp"
-                        android:paddingBottom="10dp"
+                        android:paddingBottom="50dp"
                         android:paddingRight="10dp"
                         android:textSize="16dp"
                         app:alignContent="flex_start"
                         app:alignItems="flex_start"
                         app:flexWrap="wrap" />
                 </LinearLayout>
+
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
