--- a/app/src/main/res/layout-v28/activity_like_you.xml
+++ b/app/src/main/res/layout-v28/activity_like_you.xml
@@ -19,7 +19,6 @@
         android:id="@+id/like_you_recycle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layoutAnimation="@anim/layout_animation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -27,6 +26,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <eightbitlab.com.blurview.BlurView
+        android:visibility="gone"
         android:id="@+id/blurView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
