--- a/app/src/main/res/layout/vip_dialog.xml
+++ b/app/src/main/res/layout/vip_dialog.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    app:cardCornerRadius="30dp">
+    app:cardCornerRadius="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,14 +51,50 @@
             android:layout_height="20dp"
             android:layout_alignBottom="@+id/viewpage"
             android:layout_marginBottom="20dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:paddingBottom="20dp"
-            android:background="@drawable/roundlike3"
+
                 >
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp"
+
+                    android:gravity="center"
+                    >
+                        <View
+                            android:layout_width="20dp"
+                            android:layout_height="1dp"
+                            android:layout_weight="1"
+                            android:background="@color/c3"
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="VIP"
+                            android:textSize="18dp"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+
+
+                            android:textColor="@color/c3"
+
+                            />
+                        <View
+                            android:layout_width="20dp"
+                            android:layout_height="1dp"
+                            android:layout_weight="1"
+                            android:background="@color/c3"
+                            />
+                </LinearLayout>
                 <TextView
                     android:id="@+id/test_de"
                     android:layout_width="wrap_content"
@@ -66,8 +102,8 @@
                     android:textSize="16dp"
                     android:text="ดูโฆษณาเพื่อรับ จำนวนกดถูกใจ เพิ่ม \n หรือสมัคร Dessert VIP เพื่อรับสิทธิพิเศษต่างๆ"
                     android:gravity="center"
-                    android:layout_marginTop="20dp"
-                    android:textColor="@color/cpb_white"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/c3"
                     />
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -82,8 +118,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="กำลังโหลดโฆษณา"
-                            android:textColor="@color/text_black_gray"
-                            android:backgroundTint="@color/white"
+                            android:textColor="@color/white"
+                            android:backgroundTint="@color/c3"
                             />
 
                         <Button
@@ -92,8 +128,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="฿100.00 / เดือน"
-                            android:textColor="@color/text_black_gray"
-                            android:backgroundTint="@color/white"
+                            android:textColor="@color/white"
+                            android:backgroundTint="@color/c3"
                             />
 
                 </LinearLayout>
