--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/background_gray"
     tools:context=".Register.QuestionActivity">
     <include layout="@layout/toolsbar" />
     <ProgressBar
@@ -15,6 +16,12 @@
         android:max="6"
         android:progress="5"
         android:progressTint="@color/c3" />
+    <LinearLayout
+        android:background="@color/white"
+        android:layout_marginBottom="2dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <TextView
         android:textColor="@color/text_black_gray"
         android:layout_gravity="center"
@@ -23,11 +30,25 @@
         android:textSize="30sp"
         android:text="@string/questionActivityTitle"/>
     <TextView
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/questionActivitySubTitle"
         android:textColor="@color/text_gray"/>
+    </LinearLayout>
+    <RelativeLayout
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <ProgressBar
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/progressQuestion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:progressTint="@color/c1" />
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -36,4 +57,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
     </androidx.core.widget.NestedScrollView>
+    </RelativeLayout>
 </LinearLayout>
