--- a/app/src/main/res/layout/item_question.xml
+++ b/app/src/main/res/layout/item_question.xml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:padding="20dp"
+    android:paddingTop="5dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center">
     <LinearLayout
-        android:background="@color/background_gray"
         android:layout_marginTop="2dp"
         android:orientation="vertical"
         android:id="@+id/linear_buttonQA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_marginTop="2dp"
-            android:background="@color/white"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="60dp">
         <TextView
             android:textStyle="bold"
             android:id="@+id/questionQARegister"
@@ -27,7 +21,6 @@
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:text="Message"/>
-        </LinearLayout>
         <RadioGroup
             android:background="@color/background_gray"
             android:id="@+id/radioGroupRegisterQA"
@@ -59,10 +52,7 @@
                 android:layout_height="match_parent"
                 android:text="label_4"/>
         </RadioGroup>
-        <LinearLayout
-            android:background="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+
         <TextView
             android:textStyle="bold"
             android:textColor="@color/text_black_gray"
@@ -70,7 +60,6 @@
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:text="@string/QA_improtant"/>
-        </LinearLayout>
         <RadioGroup
             android:background="@color/background_gray"
             android:id="@+id/radioGroupRegisterQAAns"
@@ -111,10 +100,6 @@
                 android:layout_height="match_parent"
                 android:text="@string/QA_choice5"/>
         </RadioGroup>
-        <LinearLayout
-            android:background="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
         <TextView
             android:layout_gravity="bottom"
             android:id="@+id/countRegisterQA"
@@ -124,7 +109,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         </LinearLayout>
-    </LinearLayout>
     <LinearLayout
         android:layout_below="@+id/linear_buttonQA"
         android:layout_alignParentBottom="true"
