--- a/app/src/main/res/layout-v28/activity_like_you.xml
+++ b/app/src/main/res/layout-v28/activity_like_you.xml
@@ -69,6 +69,13 @@
         android:text="@string/See_who_like"
         android:layout_marginBottom="30dp"/>
 
+    <ProgressBar
+        android:id="@+id/progress_like"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
