--- a/app/src/main/res/layout/activity_show_gps_open.xml
+++ b/app/src/main/res/layout/activity_show_gps_open.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="12dp"
         android:gravity="center"
         android:textColor="@color/text_black_gray"
-        android:textSize="30dp"
+        android:textSize="@dimen/Text24sp"
         android:text="ขออภัย"
         />
     <TextView
@@ -25,15 +25,15 @@
         android:layout_marginLeft="40dp"
         android:gravity="center"
         android:textColor="@color/text_black_gray"
-        android:textSize="18dp"
-        android:text="คุณต้องเปิด GPS เพื่อเข้าใช้งานแอปพลิเคชัน กรุณาลองใหม่อีกครั้ง"
+        android:textSize="@dimen/Text16sp"
+        android:text="@string/aleartGPSopen"
         />
     <Button
         android:id="@+id/open"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="ลองใหม่อีกครั้ง"
+        android:text="@string/tryAgian"
 
 
         />
