--- a/app/src/main/res/layout/activity_verify_.xml
+++ b/app/src/main/res/layout/activity_verify_.xml
@@ -53,7 +53,7 @@
             android:layout_marginRight="30dp"
             android:text="@string/otp"
             android:textColor="@color/text_black_gray"
-            android:textSize="30dp" />
+            android:textSize="@dimen/Text24sp" />
 
         <TextView
             android:id="@+id/commend"
@@ -67,7 +67,7 @@
             android:textAlignment="center"
             android:text="@string/Application_has_sent"
             android:textColor="@color/text_gray"
-            android:textSize="14dp" />
+            android:textSize="@dimen/Text14sp" />
 
         <com.chaos.view.PinView
             android:id="@+id/secondPinView"
@@ -78,7 +78,7 @@
             android:layout_marginRight="50dp"
             android:inputType="number"
             android:textColor="@color/c2"
-            android:textSize="20dp"
+            android:textSize="@dimen/Text20sp"
             app:itemCount="6"
             app:itemRadius="10dp"
             app:lineColor="@color/text_black_gray"
@@ -93,7 +93,7 @@
             android:layout_marginTop="40dp"
             android:text="@string/next_button"
             android:textColor="@color/cpb_white"
-            android:textSize="16dp" />
+            android:textSize="@dimen/Text16sp" />
 
 
     </LinearLayout>
