--- a/app/src/main/res/layout/hi_item.xml
+++ b/app/src/main/res/layout/hi_item.xml
@@ -28,6 +28,6 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="@color/cpb_white"
-            android:textSize="16dp"/>
+            android:textSize="@dimen/Text16sp"/>
 
     </com.google.android.material.card.MaterialCardView>
