--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-        <com.google.android.material.card.MaterialCardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/CardView_layout"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:cardCornerRadius="10dp"
-            android:layout_margin="5dp"
-            android:elevation="10dp"
-            android:layout_centerVertical="true">
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/CardView_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_centerVertical="true"
+    android:layout_gravity="center"
+    android:layout_margin="4dp"
+    android:elevation="10dp"
+    app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -42,9 +41,9 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:background="@drawable/gradientblack"
                 android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/gradientblack" />
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -52,37 +51,36 @@
                 android:layout_weight="2"
                 android:background="@drawable/gradientblack2" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/layout_star"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/cname"
-            app:layout_constraintStart_toStartOf="@+id/guideline2"
-            >
+            app:layout_constraintStart_toStartOf="@+id/guideline2">
+
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/ic_star"
                 android:layout_gravity="center"
-                android:layout_marginRight="5dp"
-                />
+                android:layout_marginEnd="5dp"
+                android:src="@drawable/ic_star" />
+
             <TextView
                 android:id="@+id/sendstar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxEms="8"
+                android:maxLines="1"
                 android:shadowColor="#80FFB700"
                 android:shadowDx="1"
                 android:shadowDy="1"
                 android:shadowRadius="2"
-                android:ellipsize="end"
-                android:maxEms="8"
-                android:maxLines="1"
                 android:textColor="@color/c3"
-                android:textSize="20dp"
-                android:text="ส่งดาวให้คุณ"
-                 />
+                android:textSize="@dimen/Text20sp" />
 
         </LinearLayout>
 
@@ -91,15 +89,15 @@
             android:id="@+id/cname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxEms="8"
+            android:maxLines="1"
             android:shadowColor="#80292929"
             android:shadowDx="1"
             android:shadowDy="1"
             android:shadowRadius="2"
-            android:ellipsize="end"
-            android:maxEms="8"
-            android:maxLines="1"
             android:textColor="#FFFFFF"
-            android:textSize="25dp"
+            android:textSize="@dimen/Text24sp"
             app:layout_constraintBottom_toTopOf="@+id/lay"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
             tools:text="ชื่อ" />
@@ -123,22 +121,23 @@
             android:shadowDx="1"
             android:shadowDy="1"
             android:shadowRadius="2"
-            android:text=", 20"
             android:textColor="#FFFFFF"
-            android:textSize="25dp"
+            android:textSize="@dimen/Text24sp"
             app:layout_constraintBottom_toTopOf="@+id/lay"
             app:layout_constraintStart_toEndOf="@+id/cname"
             app:layout_constraintTop_toTopOf="@+id/cname" />
+
         <LinearLayout
             android:id="@+id/lay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center"
-            app:layout_constraintStart_toStartOf="@+id/guideline2"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toTopOf="@+id/myselfcard"
+            app:layout_constraintStart_toStartOf="@+id/guideline2"
 
             >
+
             <ImageView
                 android:id="@+id/imageView7"
                 android:layout_width="wrap_content"
@@ -147,22 +146,19 @@
                 android:shadowDx="1"
                 android:shadowDy="1"
                 android:shadowRadius="2"
-                android:src="@drawable/ic_location_on_black3_24dp"
-                />
+                android:src="@drawable/ic_location_on_black3_24dp" />
 
             <TextView
                 android:id="@+id/cdis"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:elevation="10dp"
-                android:text="ระยะห่าง"
-                android:textColor="@color/cpb_white"
                 android:shadowColor="#80292929"
                 android:shadowDx="1"
                 android:shadowDy="1"
                 android:shadowRadius="2"
-                android:textSize="18dp"
-                 />
+                android:textColor="@color/cpb_white"
+                android:textSize="@dimen/Text16sp" />
 
         </LinearLayout>
 
@@ -172,17 +168,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="10dp"
-            android:paddingTop="2dp"
             android:ellipsize="end"
             android:maxLines="2"
-            android:text="myself"
+            android:paddingTop="2dp"
             android:shadowColor="#80292929"
             android:shadowDx="1"
             android:shadowDy="1"
             android:shadowRadius="2"
             android:textColor="#FFFFFF"
-
-            android:textSize="18dp"
+            android:textSize="@dimen/Text16sp"
             android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@+id/bb"
             app:layout_constraintStart_toStartOf="@+id/guideline2" />
@@ -207,5 +201,5 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </com.google.android.material.card.MaterialCardView>
+</com.google.android.material.card.MaterialCardView>
 
