--- a/app/src/main/res/layout/money.xml
+++ b/app/src/main/res/layout/money.xml
@@ -1,55 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:padding="20dp"
     android:background="@drawable/corner15"
-        >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="230dp"
-            android:orientation="vertical"
-            android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="20dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/View16dp">
+
         <ImageView
             android:id="@+id/image_vip"
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="100dp" />
 
-            />
         <TextView
-            android:layout_marginTop="20dp"
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="afafdsdf"
+            android:layout_marginTop="20dp"
             android:textColor="@color/text_black_gray"
-            android:textSize="20dp"
-            />
+            android:textSize="@dimen/Text20sp" />
+
         <TextView
             android:id="@+id/text_second"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="afafdsdf"
             android:textColor="@color/text_gray"
-            android:textSize="16dp"
-            />
-        </LinearLayout>
-        <Button
-            android:id="@+id/buy"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="฿50.00 / เดือน"
-            android:layout_gravity="center"
-            android:textColor="@color/cpb_white"
-
-            />
+            android:textSize="@dimen/Text16sp" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/buy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:text="฿50.00 / เดือน"
+        android:textColor="@color/cpb_white"
+
+        />
+</LinearLayout>
