--- a/app/src/main/res/layout/show_open_gps.xml
+++ b/app/src/main/res/layout/show_open_gps.xml
@@ -9,29 +9,30 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginRight="@dimen/View40dp"
+        android:layout_marginLeft="@dimen/View40dp"
         android:layout_marginBottom="12dp"
         android:gravity="center"
         android:textColor="@color/text_black_gray"
-        android:textSize="30dp"
-        android:text="ขออภัย"
+        android:textSize="24sp"
+        android:text="@string/apologize"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginRight="@dimen/View40dp"
+        android:layout_marginLeft="@dimen/View40dp"
         android:gravity="center"
         android:textColor="@color/text_black_gray"
-        android:textSize="20dp"
-        android:text="คุณต้องอนุญาตให้ระบบเข้าถึงตำแหน่งที่ตั้งเพื่อใช้งานแอปพลิเคชัน กรุณาลองใหม่อีกครั้ง"
+        android:textSize="@dimen/Text16sp"
+        android:text="@string/aleartGPS"
         />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="ลองใหม่อีกครั้ง"
+        android:text="@string/tryAgian"
+        android:textSize="@dimen/Text14sp"
         android:textColor="@color/cpb_white"
 
         />
