--- a/app/src/main/res/layout/vip_page1.xml
+++ b/app/src/main/res/layout/vip_page1.xml
@@ -19,17 +19,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="afafdsdf"
         android:textColor="@color/text_black_gray"
-        android:textSize="20dp"
+        android:textSize="@dimen/Text20sp"
         />
     <TextView
         android:id="@+id/text_second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="afafdsdf"
         android:textColor="@color/text_gray"
-        android:textSize="16dp"
+        android:textSize="@dimen/Text16sp"
         />
 </LinearLayout>
