--- a/app/src/main/res/layout/warning_dialog.xml
+++ b/app/src/main/res/layout/warning_dialog.xml
@@ -10,8 +10,8 @@
     >
     <ImageView
         android:id="@+id/image_vip"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/icon80dp"
+        android:layout_height="@dimen/icon80dp"
         android:src="@drawable/ic_warning2"
         />
     <TextView
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:text="@string/report_alert"
         android:textColor="@color/text_black_gray"
-        android:textSize="20dp"
+        android:textSize="@dimen/Text20sp"
         />
     <TextView
         android:id="@+id/text_warning"
@@ -29,9 +29,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginTop="10dp"
-        android:text="afafdsdf"
         android:textColor="@color/text_gray"
-        android:textSize="16dp"
+        android:textSize="@dimen/Text16sp"
         />
 
 </LinearLayout>
