--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,15 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="Text16sp">16sp</dimen>
+    <dimen name="Text20sp">20sp</dimen>
+    <dimen name="icon80dp">80dp</dimen>
+    <dimen name="cardCorner">15dp</dimen>
+    <dimen name="Text24sp">24sp</dimen>
+    <dimen name="Text14sp">14sp</dimen>
+    <dimen name="Text12sp">12sp</dimen>
+    <dimen name="Text10sp">10sp</dimen>
+    <dimen name="View40dp">40dp</dimen>
+    <dimen name="View16dp">16dp</dimen>
+    <dimen name="Text48sp">48sp</dimen>
 </resources>
